overflow fixed

--- a/src/less/techsnippet.less
+++ b/src/less/techsnippet.less
@@ -121,6 +121,7 @@ background-size: cover;
 	width:100%;
 	height:100%;
 	position:absolute;
+	overflow:hidden;
 }
 
 .aboutpage.visible {
